[9769931fe7606f34b2c17601978357fe1e3b042f]: Merge pull request #165 from DeveloperCielo/tsaitobraspag-patch-102
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -1056,7 +1056,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>-</td>
       <td>Conditional</td>
-      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring<br /><strong>Installments</strong> - Installments Transaction</td>
     </tr>
   </tbody>
 </table>
@@ -1683,7 +1683,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>-</td>
       <td>Conditional</td>
-      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring<br /><strong>Installments</strong> - Installments Transaction</td>
     </tr>
   </tbody>
 </table>
@@ -2126,7 +2126,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>-</td>
       <td>Conditional</td>
-      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring<br /><strong>Installments</strong> - Installments Transaction</td>
     </tr>
   </tbody>
 </table>
@@ -2846,7 +2846,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>-</td>
       <td>Conditional</td>
-      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring</td>
+      <td>Indicates the purpose of credential storage, case the value of field “Usage” is “Used” <br /><strong>Recurring</strong> - Scheduled recurring<br /><strong>Unscheduled</strong> - Unscheduled recurring<br /><strong>Installments</strong> - Installments Transaction</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">FraudAnalysis.Provider</code></td>
