[90376ac5fd8d8051d0ef8a41a33435e3524ab7dd]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -17882,7 +17882,7 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
   </tbody>
 </table>
 
-<h3 id="códigos-de-retorno-zero-auth">Códigos de Retorno Zero Auth</h3>
+<h3 id="códigos-de-retorno">Códigos de Retorno</h3>
 
 <table>
   <thead>
