[f007580f660b342ff53c21b779eaf384abdc86db]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3841,7 +3841,7 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
 
 <h2 id="arquitetura-1">Arquitetura</h2>
 
-<p>Para entender a arquitetura da Cielo Store é necessário entender os 3 conceitos abaixo:</p>
+<p>Para entender a arquitetura da Cielo Store é necessário entender os conceitos abaixo:</p>
 
 <ul>
   <li>
@@ -3850,17 +3850,12 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
  <a href="https://developercielo.github.io/manual/cielo-lio#dev-console">Saiba mais</a></p>
   </li>
   <li>
-    <p><strong>Aplicativo Próprios</strong>
- Aplicativos desenvolvidos para serem distribuídos a clientes específicos. Os aplicativos próprios não estarão disponíveis para download na Cielo Store.
- <a href="https://developercielo.github.io/manual/cielo-lio#aplicativos-próprios">Saiba mais</a></p>
-  </li>
-  <li>
     <p><strong>Loja Privada</strong>
  Modelo específico utilizado para distribuição de aplicativos próprios para os lojistas.
  <a href="https://developercielo.github.io/manual/cielo-lio#loja-privada">Saiba mais</a></p>
   </li>
   <li>
-    <p><strong>Aplicativos Públicos</strong>
+    <p><strong>Loja Publica</strong>
  Aplicativos desenvolvidos para serem disponibilizados na loja de aplicativo Cielo Store. Esses aplicativos poderão ser baixados por estabelecimentos comerciais (lojistas) acessando a Cielo Store via Cielo LIO.
  <a href="https://developercielo.github.io/manual/cielo-lio#aplicativos-públicos">Saiba mais</a></p>
   </li>
@@ -4152,7 +4147,7 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
 <strong>payment.status:</strong> “CANCELED” (Pagamentos cancelados)
 <strong>payment.status:</strong> “CIELO_PURCHASE” (pagamentos isentos(compras de teste/desenvolvimento))</p>
 
-<h2 id="aplicativos-próprios">Aplicativos Próprios</h2>
+<h2 id="aplicativos-próprios-loja-privada">Aplicativos Próprios (Loja Privada)</h2>
 
 <p>Os aplicativos próprios atendem especificamente aqueles desenvolvedores que desejam disponibilizar seu aplicativo apenas para alguns lojistas específicos. O aplicativo próprio não é disponibilizado na Cielo Store e nem utilizado por outros lojistas que não tenham sido solicitados pelo desenvolvedor.</p>
 
@@ -4187,7 +4182,7 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
 
 <p>Clique na aba Ajuda -&gt; Minha LIO -&gt; Buscar atualizações</p>
 
-<h2 id="aplicativos-públicos">Aplicativos Públicos</h2>
+<h2 id="aplicativos-públicos-loja-publica">Aplicativos Públicos (Loja Publica)</h2>
 
 <p>Os aplicativos públicos são indicados para aqueles desenvolvedores e parceiros que desejam disponibilizar e escalar sua aplicação e permitir o download em todas os equipamentos de Cielo LIO distribuídos nos estabelecimentos comerciais (lojistas) no Brasil via aplicativo da Cielo Store.</p>
 
