[d5e5ee87a5dcc08e846479415f7777f1550a000d]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3852,12 +3852,12 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
   <li>
     <p><strong>Loja Privada</strong>
  Modelo específico utilizado para distribuição de aplicativos próprios para os lojistas.
- <a href="https://developercielo.github.io/manual/cielo-lio#loja-privada">Saiba mais</a></p>
+ <a href="https://developercielo.github.io/manual/cielo-lio#aplicativos-pr%C3%B3prios-(loja-privada)">Saiba mais</a></p>
   </li>
   <li>
     <p><strong>Loja Publica</strong>
  Aplicativos desenvolvidos para serem disponibilizados na loja de aplicativo Cielo Store. Esses aplicativos poderão ser baixados por estabelecimentos comerciais (lojistas) acessando a Cielo Store via Cielo LIO.
- <a href="https://developercielo.github.io/manual/cielo-lio#aplicativos-públicos">Saiba mais</a></p>
+ [Saiba mais] (https://developercielo.github.io/manual/cielo-lio#aplicativos-p%C3%BAblicos-(loja-publica))</p>
   </li>
 </ul>
 
@@ -3914,18 +3914,6 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
 <p>Nosso time irá realizar os procedimentos necessários e então, todos os aplicativos publicados pelo desenvolvedor que estejam no status de Desenvolvimento poderão ser baixados em sua Cielo LIO de desenvolvimento.</p>
 
 <p><a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">Clique Aqui</a> para solicitar a habilitação de sua LIO para LIO de Dev.</p>
-
-<h3 id="loja-privada">Loja Privada</h3>
-
-<p>A loja privada foi um modelo criado para permitir a distribuição dos aplicativos próprios desenvolvidos pelo parceiro. É necessário solicitar a criação da Loja Privada para então ser possível fazer o upload de um aplicativo próprio no Dev Console.</p>
-
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">Clique Aqui</a> para solicitar a criação da Loja Privada.</p>
-
-<p>A partir da Loja Privada criada, o desenvolvedor poderá publicar seu aplicativo no Dev Console selecionando sua loja privada.</p>
-
-<p>A loja privada é essencial para realizar a distribuição de aplicativos próprios lojistas específicos.</p>
-
-<p><a href="https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios">Saiba Mais</a></p>
 
 <h3 id="promover-aplicativo-para-desenvolvimento">Promover Aplicativo para Desenvolvimento</h3>
 
@@ -4147,13 +4135,17 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
 <strong>payment.status:</strong> “CANCELED” (Pagamentos cancelados)
 <strong>payment.status:</strong> “CIELO_PURCHASE” (pagamentos isentos(compras de teste/desenvolvimento))</p>
 
-<h2 id="aplicativos-próprios-loja-privada">Aplicativos Próprios (Loja Privada)</h2>
+<h2 id="loja-privada">Loja Privada</h2>
 
-<p>Os aplicativos próprios atendem especificamente aqueles desenvolvedores que desejam disponibilizar seu aplicativo apenas para alguns lojistas específicos. O aplicativo próprio não é disponibilizado na Cielo Store e nem utilizado por outros lojistas que não tenham sido solicitados pelo desenvolvedor.</p>
+<p>A loja privada foi um modelo criado para permitir a distribuição dos aplicativos próprios desenvolvidos pelo parceiro. É necessário solicitar a criação da Loja Privada para então ser possível fazer o upload de um aplicativo próprio no Dev Console.</p>
 
-<p>Para conhecer mais sobre o modelo de distribuição de aplicativos próprios, <a href="https://developercielo.github.io/manual/cielo-lio#distribuição-de-aplicativos-próprios">CLIQUE AQUI</a></p>
+<p><a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">Clique Aqui</a> para solicitar a criação da Loja Privada.</p>
 
-<h3 id="upload-de-novos-aplicativos-próprios-e-novas-versões">Upload de novos Aplicativos Próprios e novas versões</h3>
+<p>A partir da Loja Privada criada, o desenvolvedor poderá publicar seu aplicativo no Dev Console selecionando sua loja privada.</p>
+
+<p>A loja privada é essencial para realizar a distribuição de aplicativos próprios lojistas específicos.</p>
+
+<h3 id="upload-de-novos-aplicativos-e-novas-versões-na-loja-privada">Upload de novos Aplicativos e novas versões na loja privada</h3>
 
 <p>Para realizar o upload de novos aplicativos próprios, acesse o Dev Console e adicione um novo aplicativo selecionando a opção de loja privada e em seguida selecione a loja privada referente a sua empresa.</p>
 
@@ -4170,19 +4162,17 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
   </li>
 </ul>
 
-<h3 id="distribuição-de-aplicativos-próprios">Distribuição de Aplicativos Próprios</h3>
+<h3 id="distribuição-de-aplicativos-na-loja-privada">Distribuição de Aplicativos na loja privada</h3>
 
-<p>Aqueles desenvolvedores que optarem por desenvolver aplicativos próprios e distribuir apenas para lojistas específicos devem solicitar via canal do Portal de Desenvolvedores informando quais os números ECs (número com 16 dígitos) e lógicos das LIOs que devem receber o aplicativo.</p>
+<p>Aqueles desenvolvedores que optarem por desenvolver aplicativos próprios e distribuir apenas para lojistas específicos devem efetuar o vinculo do EC do cliente a sua loja privada, pelo própio DevConsole</p>
 
-<p><a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">Clique Aqui</a> para solicitar a distribuição de seu aplicativo.</p>
-
-<h3 id="download-de-aplicativo-próprios-na-cielo-lio">Download de Aplicativo Próprios na Cielo LIO</h3>
+<h3 id="download-de-aplicativo-da-loja-privada-na-lio">Download de Aplicativo da loja privada na LIO</h3>
 
 <p>Para realizar o download de aplicativos próprios na Cielo LIO, execute o seguinte procedimento</p>
 
 <p>Clique na aba Ajuda -&gt; Minha LIO -&gt; Buscar atualizações</p>
 
-<h2 id="aplicativos-públicos-loja-publica">Aplicativos Públicos (Loja Publica)</h2>
+<h2 id="loja-publica">Loja Publica</h2>
 
 <p>Os aplicativos públicos são indicados para aqueles desenvolvedores e parceiros que desejam disponibilizar e escalar sua aplicação e permitir o download em todas os equipamentos de Cielo LIO distribuídos nos estabelecimentos comerciais (lojistas) no Brasil via aplicativo da Cielo Store.</p>
 
