[b4f3ecbfd1f4711a068d4d5236e40728c1074464]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3852,12 +3852,12 @@ Em ambiente de produção, uma vez que o cancelamento for realizado na Cielo LIO
   <li>
     <p><strong>Loja Privada</strong>
  Modelo específico utilizado para distribuição de aplicativos próprios para os lojistas.
- <a href="https://developercielo.github.io/manual/cielo-lio#aplicativos-pr%C3%B3prios-(loja-privada)">Saiba mais</a></p>
+ <a href="https://developercielo.github.io/manual/cielo-lio#loja-privada">Saiba mais</a></p>
   </li>
   <li>
     <p><strong>Loja Publica</strong>
  Aplicativos desenvolvidos para serem disponibilizados na loja de aplicativo Cielo Store. Esses aplicativos poderão ser baixados por estabelecimentos comerciais (lojistas) acessando a Cielo Store via Cielo LIO.
- [Saiba mais] (https://developercielo.github.io/manual/cielo-lio#aplicativos-p%C3%BAblicos-(loja-publica))</p>
+ [Saiba mais] (https://developercielo.github.io/manual/cielo-lio#loja-publica)</p>
   </li>
 </ul>
 
