[d6fd08853b72b60a4e32ca87fa053743199d4bf0]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -17431,10 +17431,6 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
 </span><span class="p">]</span><span class="w">
 </span></code></pre></div></div>
 
-<h3 id="códigos-de-erros-da-api">Códigos de Erros da API</h3>
-
-<p>Códigos retornados em caso de erro, identificando o motivo do erro e suas respectivas mensagens.</p>
-
 <table>
   <thead>
     <tr>
@@ -17877,6 +17873,266 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     <tr>
       <td>187</td>
       <td>ExtraData Collection contains one or more duplicated names</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>188</td>
+      <td>Avs with CPF invalid</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>189</td>
+      <td>Avs with length of street exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>190</td>
+      <td>Avs with length of number exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>191</td>
+      <td>Avs with length of district exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>192</td>
+      <td>Avs with zip code invalid</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>193</td>
+      <td>Split Amount must be greater than zero</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>194</td>
+      <td>Split Establishment is Required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>195</td>
+      <td>The PlataformId is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>196</td>
+      <td>DeliveryAddress is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>197</td>
+      <td>Street is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>198</td>
+      <td>Number is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>199</td>
+      <td>ZipCode is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>200</td>
+      <td>City is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>201</td>
+      <td>State is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>202</td>
+      <td>District is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>203</td>
+      <td>Cart item Name is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>204</td>
+      <td>Cart item Quantity is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>205</td>
+      <td>Cart item type is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>206</td>
+      <td>Cart item name length exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>207</td>
+      <td>Cart item description length exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>208</td>
+      <td>Cart item sku length exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>209</td>
+      <td>Shipping addressee sku length exceeded</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>210</td>
+      <td>Shipping data cannot be null</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>211</td>
+      <td>WalletKey is invalid</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>212</td>
+      <td>Merchant Wallet Configuration not found</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>213</td>
+      <td>Credit Card Number is invalid</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>214</td>
+      <td>Credit Card Holder Must Have Only Letters</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>215</td>
+      <td>Agency is required in Boleto Credential</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>216</td>
+      <td>Customer IP address is invalid</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>300</td>
+      <td>MerchantId was not found</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>301</td>
+      <td>Request IP is not allowed</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>302</td>
+      <td>Sent MerchantOrderId is duplicated</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>303</td>
+      <td>Sent OrderId does not exist</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>304</td>
+      <td>Customer Identity is required</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>306</td>
+      <td>Merchant is blocked</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>307</td>
+      <td>Transaction not found</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>308</td>
+      <td>Transaction not available to capture</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>309</td>
+      <td>Transaction not available to void</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>310</td>
+      <td>Payment method doest not support this operation</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>311</td>
+      <td>Refund is not enabled for this merchant</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>312</td>
+      <td>Transaction not available to refund</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>313</td>
+      <td>Recurrent Payment not found</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>314</td>
+      <td>Invalid Integration</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>315</td>
+      <td>Cannot change NextRecurrency with pending payment</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>316</td>
+      <td>Cannot set NextRecurrency to past date</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>317</td>
+      <td>Invalid Recurrency Day</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>318</td>
+      <td>No transaction found</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>319</td>
+      <td>Smart recurrency is not enabled</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>320</td>
+      <td>Can not Update Affiliation Because this Recurrency not Affiliation saved</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>321</td>
+      <td>Can not set EndDate to before next recurrency</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>322</td>
+      <td>Zero Dollar Auth is not enabled</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>323</td>
+      <td>Bin Query is not enabled</td>
       <td> </td>
     </tr>
   </tbody>
