[7bce104fbc904b619629fc72e782d483c7f65e33]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -17431,6 +17431,10 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
 </span><span class="p">]</span><span class="w">
 </span></code></pre></div></div>
 
+<h3 id="códigos-de-erros-da-api">Códigos de Erros da API</h3>
+
+<p>Códigos retornados em caso de erro, identificando o motivo do erro e suas respectivas mensagens.</p>
+
 <table>
   <thead>
     <tr>
@@ -17908,62 +17912,62 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     <tr>
       <td>194</td>
       <td>Split Establishment is Required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>195</td>
       <td>The PlataformId is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>196</td>
       <td>DeliveryAddress is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>197</td>
       <td>Street is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>198</td>
       <td>Number is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>199</td>
       <td>ZipCode is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>200</td>
       <td>City is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>201</td>
       <td>State is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>202</td>
       <td>District is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>203</td>
       <td>Cart item Name is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>204</td>
       <td>Cart item Quantity is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>205</td>
       <td>Cart item type is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>206</td>
@@ -18043,12 +18047,12 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     <tr>
       <td>304</td>
       <td>Customer Identity is required</td>
-      <td> </td>
+      <td>Campo enviado está vazio ou invalido</td>
     </tr>
     <tr>
       <td>306</td>
       <td>Merchant is blocked</td>
-      <td> </td>
+      <td>Merchant está bloqueado</td>
     </tr>
     <tr>
       <td>307</td>
