[3098458e5b9a6b907665a08bfa9df5a3efa5ef09]: Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -148,7 +148,7 @@
 
 <h2 id="quem-pode-usar-o-3ds-20">Quem pode usar o 3DS 2.0?</h2>
 
-<p>Todos os estabelecimentos eCommerce devem se adequar à solução a partir de Maio de 2019 frente ao mandate de bandeira que exige autenticação em todas as transações digitais, sejam de débito, crédito ou pré-pago. Aos segmentos que possuem alto índice de chargeback/fraude, a solução tende a ser ainda mais vantajosa frente ao benefício de passar o liability shift ao banco emissor.</p>
+<p>Todos os estabelecimentos eCommerce devem se adequar à solução a partir de Maio de 2019 frente ao Release de Bandeiras. O 3DS 2.0 é válido para todas as transações de eCommerce, sejam de débito, crédito ou pré-pago. Aos segmentos que possuem alto índice de chargeback/fraude, a solução tende a ser ainda mais vantajosa frente ao benefício de passar o liability shift ao banco emissor.</p>
 
 <h2 id="quais-são-requisitos-para-a-utilização-do-3ds-20">Quais são requisitos para a utilização do 3DS 2.0?</h2>
 
@@ -156,6 +156,7 @@
 
 <ul>
   <li>Ter afiliação do Cielo E-Commerce 3.0;</li>
+  <li>Ter o cadastro de 3DS 2.0 (solicitar para o Suporte eCommerce);</li>
   <li>Concluir a integração técnica do fluxo de autenticação;</li>
   <li>Concluir a integração técnica do fluxo de autorização;</li>
 </ul>
