[bad71ff3e07c0798d9c7456e460f6618c2061beb]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -146,18 +146,20 @@
 
 <p><strong>Key words:</strong> Credit and Debit Card Authentication, EMVCO, 3DS 2.0, Visa, Mastercard, E-Commerce</p>
 
-<h2 id="who-can-use-3ds-20">Who can use 3DS 2.0?</h2>
+<h2 id="who-is-able-to-use-the-3ds-20">Who is able to use the 3DS 2.0?</h2>
 
-<p>Any merchant that has an e-Commerce or an application can use the solution. It is particularly recommended to merchants that belong to the risk segment.</p>
+<p>All the e-Commerce merchant must adapt itself to the solution from May 2019 for the brands release. The 3DS 2.0 
+is valid for all the eCommerce transactions, whether it is debit, credit or prepaid card. All the merchants that have a high chargeback/fraud rate, the solution should be even more useful for the benefit of passing the liability shift to the issue bank.</p>
 
 <h2 id="what-is-required-to-use-3ds-20">What is required to use 3DS 2.0?</h2>
 
 <p>The merchant must attend the below requirements to use 3DS 2.0:</p>
 
 <ul>
-  <li>Cielo E-Commerce 2.0 affiliation;</li>
-  <li>Integrate the authentication process;</li>
+  <li>Cielo E-Commerce 3.0 affiliation;</li>
+  <li>Registered in the 3DS 2.0 (request for eCommerce Support);</li>
   <li>Integrate the authorization process;</li>
+  <li>Integrate the authentication process;</li>
 </ul>
 
 <aside class="notice">In case you implement the authentication process apart from Cielo (External Authentication), skip to the authorization step.</aside>
