[cfc9ad06e4d9e5c36d1585897488c3140f659a7e]: Merge pull request #174 from DeveloperCielo/tsaitobraspag-patch-109
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -1315,7 +1315,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
 
 <h2 id="etapa-de-autorização-cielo-e-commerce-15">Etapa de Autorização (Cielo E-Commerce 1.5)</h2>
 
-<p>Veja exemplo abaixo, descrito o envio dos dados de autenticação da requisição de autorização da API Cielo 1.5. Os campos Version e ReferenceID serão disponibilizados em breve:</p>
+<p>Veja exemplo abaixo, descrito o envio dos dados de autenticação da requisição de autorização da API Cielo 1.5.</p>
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/servicos/ecommwsec.do</span></aside>
 
