[962b43f57ced5b1b4d7882b934dda925cbfaca6c]: Merge pull request #175 from DeveloperCielo/tsaitobraspag-patch-110
Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -1376,7 +1376,7 @@ This procedure is also valid for merchants that performed authentication outside
 
 <h2 id="authentication-step-via-cielo-e-commerce-15">Authentication STEP via Cielo E-Commerce 1.5</h2>
 
-<p>You can find below an example of the authorization request including authentication data to CIELO 1.5 API. Parameters <em><strong>Version</strong></em> and <em><strong>ReferenceId</strong></em> will be available soon:</p>
+<p>You can find below an example of the authorization request including authentication data to CIELO 1.5 API.</p>
 
 <aside class="request"><span class="method post">POST</span> <span class="endpoint">/servicos/ecommwsec.do</span></aside>
 
