[70a0962480db18e7d7023b5100ff187e5f996a1c]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -18667,6 +18667,13 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
       <td>Não</td>
     </tr>
     <tr>
+      <td>88</td>
+      <td>Falha na criptografia dos dados.</td>
+      <td>Falha na criptografia dos dados.</td>
+      <td>Entre em contato com seu banco emissor.</td>
+      <td>Não</td>
+    </tr>
+    <tr>
       <td>89</td>
       <td>Erro na transação.</td>
       <td>Transação não autorizada. Erro na transação. O portador deve tentar novamente e se o erro persistir, entrar em contato com o banco emissor.</td>
@@ -18699,6 +18706,13 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
       <td>Transação não autorizada. Violação de regra - Possível erro no cadastro.</td>
       <td>Transação não autorizada. Violação de regra - Possível erro no cadastro.</td>
       <td>Sua transação não pode ser processada. Entre em contato com a loja virtual.</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>94</td>
+      <td>Transação duplicada.</td>
+      <td>Transação duplicada enviado para autorização/captura.</td>
+      <td>O estabelecimento deve revisar as transações enviadas.</td>
       <td>Não</td>
     </tr>
     <tr>
