[4cd778943e75d823054ae5c2bdeaf4ed17bd42b4]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -18991,7 +18991,7 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
     <tr>
       <td>GA</td>
       <td>Aguarde Contato</td>
-      <td>Transação não autorizada. Referida pelo Lynx Online de forma preventiva. A Cielo entrará em contato com o lojista sobre esse caso.</td>
+      <td>Transação não autorizada. Referida pelo Lynx Online de forma preventiva.</td>
       <td>Transação não autorizada. Entre em contato com o lojista.</td>
       <td>Não</td>
     </tr>
