[2d67a4c5816446d1ffcc3da82591943557588abe]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -15390,7 +15390,7 @@ More information and complete integration, you can find in the link: https://dev
     <tr>
       <td>GA</td>
       <td>Wait for contact</td>
-      <td>Unauthorized transaction. Referred by Lynx Online in a preventive way. Cielo will contact the merchant about this case.</td>
+      <td>Unauthorized transaction. Referred by Lynx Online in a preventive way.</td>
       <td>Unauthorized transaction. Contact the merchant.</td>
       <td>No</td>
       <td> </td>
