[4e1bddaa6c86d2bd865ba1cdb1d26d39ecbb2ac4]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -885,7 +885,7 @@ Esses dados são separados nos seguintes “nós principais”:</p>
   </tbody>
 </table>
 
-<p><strong>Cabeçalho e Autenticação</strong> - Todas as requisições enviadas para a Cielo deverão ser autenticadas pela loja. A autenticação consiste no envio do <code class="highlighter-rouge">MerchantID</code>, que é o identificador único da loja fornecido pela Cielo após a afiliação da loja. A autenticação da loja deverá ser feita através do envio do campo de cabeçalho HTTP <code class="highlighter-rouge">MerchandId</code>, como ilustrado abaixo e ao lado:</p>
+<p><strong>Cabeçalho e Autenticação</strong> - Todas as requisições enviadas para a Cielo deverão ser autenticadas pela loja. A autenticação consiste no envio do <code class="highlighter-rouge">MerchantId</code>, que é o identificador único da loja fornecido pela Cielo após a afiliação da loja. A autenticação da loja deverá ser feita através do envio do campo de cabeçalho HTTP <code class="highlighter-rouge">MerchantId</code>, como ilustrado abaixo e ao lado:</p>
 
 <p><strong>Body - Detalhado</strong></p>
 
