[8269eb9486b7133f141758842ed914e336fb27b6]: Update 2000-01-01-checkout-cielo.md

--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -911,7 +911,7 @@ These data are separated into the following “main nodes”:</p>
   </tbody>
 </table>
 
-<p><strong>Header and Authentication</strong> - All requests sent to Cielo must be authenticated by the store. Authentication consists of sending <code class="highlighter-rouge">MerchantID</code>, which is the unique store identifier provided by Cielo after store affiliation. Store authentication should be done by sending the <code class="highlighter-rouge">MerchandId</code> HTTP header field, as shown below and beside:</p>
+<p><strong>Header and Authentication</strong> - All requests sent to Cielo must be authenticated by the store. Authentication consists of sending <code class="highlighter-rouge">MerchantId</code>, which is the unique store identifier provided by Cielo after store affiliation. Store authentication should be done by sending the <code class="highlighter-rouge">MerchantId</code> HTTP header field, as shown below and beside:</p>
 
 <p><strong>Body - Detailed</strong></p>
 
