--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -164,6 +164,16 @@ is valid for all the eCommerce transactions, whether it is debit, credit or prep
 
 <aside class="notice">In case you implement the authentication process apart from Cielo (External Authentication), skip to the authorization step.</aside>
 
+<h2 id="what-is-the-data-only---notification-only">What is the Data Only - Notification Only</h2>
+
+<p>Data Only is an extra and optional field available to the merchant that can be used exclusively for MasterCard.</p>
+
+<p>To use is, it must be parameterized the field <strong>bpmpi_auth_notifyonly</strong> described in the <strong>Authentication Step - Step 3 - Mapping Classes</strong>. In the Data Only model, the additional 3DS 2.0 fields are mapped in the same way, and sent to Mastercard and Issuing Banks, however, without requiring authentication.</p>
+
+<p>The benefit of using Data Only is to enrich the Issuing Banks and MasterCard database, who will receive more information about the holders of each merchant. This field seeks to improve the Silent Authentication and Issuer approval rating, considering the current context where the market is growing to integrate with the new 2.0 authentication protocol. In addition, from May 2019, Mastercard will charge an additional <em>fee</em> for unauthenticated transactions and Data Only will exempt the <em>fee</em> charged.</p>
+
+<p>It is worth noting  that in this model, since there is no authentication of the Issuer, the risk of chargeback for fraud remains with the merchant.</p>
+
 <h2 id="how-does-the-authenticated-authorization-via-3ds-20-work">How does the authenticated authorization via 3DS 2.0 work?</h2>
 
 <p>The authorization process using authentication through 3DS 2.0 occurs in two steps:</p>
